@@ -68,6 +68,10 @@ func uniformLower(s, cutset string) string {
 	return s
 }
 
+func CleanHostname(s string) (string, error) {
+	return idna.Lookup.ToASCII(strings.ToLower(strings.TrimSpace(s)))
+}
+
 func (dt *URLMatcher) getOrNewSubTree(s string) *URLMatcher {
 	subdt, ok := dt.subtrees[s]
 	if !ok {
@@ -266,41 +270,58 @@ func (dt *URLMatcher) walkFind(s string) []*URLMatcher {
 // CheckURL checks a *url.URL against the URLMatcher.
 // If the url matches (a "hit"), it returns true.
 // If the url does not match (a "miss"), it return false.
-func (dt *URLMatcher) CheckURL(u *url.URL) bool {
+func (dt *URLMatcher) CheckURL(u *url.URL) (bool, error) {
 	// alas, (*url.URL).Hostname() does not ToLower
-	hostname := strings.ToLower(u.Hostname())
+	// so lower and idna map
+	hostname, err := CleanHostname(u.Hostname())
+	if err != nil {
+		// invalid idna is a fail/false
+		return false, fmt.Errorf("bad hostname: %w", err)
+	}
+
 	matches := dt.walkFind(hostname)
 	defer putURLMatcherSlice(&matches)
 
 	// check for base domain matches first, to avoid path checking if possible
 	for _, match := range matches {
+		// we can shortcut lookups only if the match has no associated url rules
 		if !match.hasRules {
-			return true
+			return true, nil
 		}
 	}
 
 	// no luck, so try path rules this time
 	for _, match := range matches {
 		// anything match.hasRules _shouldn't_ be nil, so this check is
-		// likely superfluous...
+		// likely superfluous... but retained for extra safety in case
+		// the api changes at some point
 		if match.pathChecker == nil {
 			continue
 		}
 		if match.pathChecker.CheckPath(u.EscapedPath()) {
-			return true
+			return true, nil
 		}
 	}
-	return false
+	return false, nil
 }
 
 // CheckHostname checks the supplied hostname (as a string).
-// Note: CheckHostname requires that the hostname is already escaped,
-// sanitized, space trimmed, and lowercased...
-// Basically sanitized in a way similar to:
-//
-//	strings.ToLower((*url.URL).Hostname())
-func (dt *URLMatcher) CheckHostname(hostname string) bool {
-	hostname = strings.ToLower(hostname)
+// Returns an error if the hostname is not idna lookup compliant.
+func (dt *URLMatcher) CheckHostname(hostname string) (bool, error) {
+	// do idna lookup mapping. if mapping fails, return false
+	hostname, err := CleanHostname(hostname)
+	if err != nil {
+		// invalid idna is a fail/false
+		return false, fmt.Errorf("bad hostname: %w", err)
+	}
+
+	return dt.CheckCleanHostname(hostname), nil
+}
+
+// CheckHostnameClean checks the supplied hostname (as a string).
+// The supplied hostname must already be safe/cleaned, in a way
+// similar to IdnaLookupMap.
+func (dt *URLMatcher) CheckCleanHostname(hostname string) bool {
 	matches := dt.walkFind(hostname)
 	defer putURLMatcherSlice(&matches)
 	return len(matches) > 0
